# backend/internal/apiresponse/error_response.go
@@ -1,0 +1,5 @@
+package apiresponse
+
+type ErrorResponse struct {
+	Error string `json:"error" example:"The server encountered a problem and could not process your request"`
+}
